worked to make frontend close to spec, still needs work both in features and in design

--- a/energy_assets_frontend/package.json
+++ b/energy_assets_frontend/package.json
@@ -3,9 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.4.0",
+    "@material-ui/icons": "^1.1.0",
+    "@material-ui/lab": "^3.0.0-alpha.23",
+    "express": "^4.16.3",
+    "material-ui-slider-label": "git+https://github.com/tariqwest/material-ui-slider-label.git",
+    "rc-slider": "^8.6.3",
     "react": "^16.5.2",
+    "react-cookie": "^3.0.3",
     "react-dom": "^16.5.2",
+    "react-google-login": "^3.2.1",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "2.0.5",
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "web3": "^0.19.0"
   },
   "scripts": {
