--- a/energy_assets_frontend/package.json
+++ b/energy_assets_frontend/package.json
@@ -18,11 +18,12 @@
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-scripts": "2.0.5",
+    "react-web3-provider": "^1.1.1",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "web3": "^0.19.0"
+    "web3": "^0.19.1"
   },
   "scripts": {
     "start": "react-scripts start",
